# prediction-trading

./: .gitignore  backtest_5day.py  backtest_demo.py  backtest_mlb_burst.py  dashboard.html  paper_trade.py  paper_trade_mlb.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: pre-push-kb-reminder.py
adapters/kalshi/: __init__.py  config.py  constants.py  data.py  execution.py  factories.py  live_factories.py  paper.py  providers.py  ws.py
adapters/mlb_stats/: client.py
catalog/: sync.py
dashboard/api/: config.py  main.py
dashboard/ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
knowledge-base/: SCHEMA.md  index.md  log.md
knowledge-base/topics/: architecture.md  decisions.md  kalshi-api.md  nautilus-integration.md
safety/: __init__.py  alerts.py  dead_mans_switch.py  orphan_monitor.py  position_limits.py  quarantine.py  reconciliation.py  state_store.py  types.py
scripts/: backtest_mlb_burst.py  paper_trade.py  paper_trade_mlb.py  start_dashboard.sh
strategies/: mlb_burst.py  mlb_burst_signals.py  threshold.py
strategies/mlb_burst/: __init__.py  backtest.py  config.json  mlb_burst.py  mlb_burst_signals.py
strategies/threshold/: __init__.py  config.json
tests/catalog/: test_sync.py
tests/dashboard/: test_backtest_routes.py  test_backtest_runner.py  test_config_mgr.py  test_control_routes.py  test_database.py  test_process_mgr.py  test_state_poller.py  test_strategies_route.py  test_ws.py
tests/safety/: test_alerts.py  test_dead_mans_switch.py  test_orphan_monitor.py  test_position_limits.py  (+4 more)
(+50 files in other folders)
