[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nautilus-plus"
version = "0.1.0"
description = "Personal prediction market trading system built on NautilusTrader"
requires-python = ">=3.11"
dependencies = [
    "nautilus_trader>=1.208,<2",
    "httpx>=0.27,<1",
    "cryptography>=42,<45",
    "websockets>=13,<15",
    "redis>=5,<6",
    "pydantic>=2.0,<3",
    "pandas>=2,<3",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "respx>=0.21,<1",
    "fakeredis>=2,<3",
]

[tool.hatch.build.targets.wheel]
packages = ["adapters", "safety", "catalog", "strategies", "backtest", "live"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
